# jintanakan

./: .gitignore  LICENSE  README.md  pyproject.toml
models/deq/: __init__.py  config.py  model.py  summary.md
models/llama/: __init__.py  config.py  model.py
module/: cache.py  config.py  flax.py  flax_old.py  rope.py  utils.py
