[project]
name = "jintanakan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.2",
    "flax>=0.12.4",
    "huggingface-hub>=0.36.2",
    "jax>=0.9.0.1",
    "marker-pdf>=1.10.2",
    "streamlit>=1.54.0",
    "streamlit-ace>=0.1.1",
]
