[project]
name = "jintanakan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.2",
    "datasets>=3.0.0",
    "flax>=0.12.4",
    "huggingface-hub>=0.36.2",
    "jax>=0.9.0.1",
    "marker-pdf>=1.10.2",
    "optax>=0.2.0",
    "orbax-checkpoint>=0.11.0",
    "streamlit>=1.54.0",
    "streamlit-ace>=0.1.1",
    "tokenizers>=0.20.0",
    "transformers>=4.40.0",
]
